; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gizmondo/extr_menu.c_load_progress_cb.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/gizmondo/extr_menu.c_load_progress_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@menu_screen = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @load_progress_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @load_progress_cb(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i16*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = mul nsw i32 %6, 320
  %8 = sdiv i32 %7, 100
  store i32 %8, i32* %4, align 4
  %9 = call i32 @menu_draw_begin(i32 0)
  %10 = load i64, i64* @menu_screen, align 8
  %11 = inttoptr i64 %10 to i16*
  %12 = getelementptr inbounds i16, i16* %11, i64 6420
  store i16* %12, i16** %5, align 8
  %13 = load i32, i32* %4, align 4
  %14 = icmp sgt i32 %13, 320
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32 320, i32* %4, align 4
  br label %16

16:                                               ; preds = %15, %1
  store i32 10, i32* %3, align 4
  br label %17

17:                                               ; preds = %25, %16
  %18 = load i32, i32* %3, align 4
  %19 = icmp sgt i32 %18, 0
  br i1 %19, label %20, label %30

20:                                               ; preds = %17
  %21 = load i16*, i16** %5, align 8
  %22 = load i32, i32* %4, align 4
  %23 = mul nsw i32 %22, 2
  %24 = call i32 @memset(i16* %21, i32 255, i32 %23)
  br label %25

25:                                               ; preds = %20
  %26 = load i32, i32* %3, align 4
  %27 = add nsw i32 %26, -1
  store i32 %27, i32* %3, align 4
  %28 = load i16*, i16** %5, align 8
  %29 = getelementptr inbounds i16, i16* %28, i64 321
  store i16* %29, i16** %5, align 8
  br label %17

30:                                               ; preds = %17
  %31 = call i32 (...) @menu_draw_end()
  ret void
}

declare dso_local i32 @menu_draw_begin(i32) #1

declare dso_local i32 @memset(i16*, i32, i32) #1

declare dso_local i32 @menu_draw_end(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
